--- a/.env.example
+++ b/.env.example
@@ -1,189 +1,38 @@
-# ============================================
-# ASTRO SUMI - ENVIRONMENT CONFIGURATION
-# ============================================
-# 
-# SECURITY WARNING: Never commit .env.local or any .env.* files to version control!
-# These files may contain sensitive information like API keys and secrets.
-# 
-# SETUP INSTRUCTIONS:
-# 1. Copy this file to .env.local: cp .env.example .env.local
-# 2. Fill in your actual values in .env.local
-# 3. Restart your development server after making changes
-# 4. For production, set these variables in your hosting platform
-#
-# ✅ REQUIRED: None - all variables are optional with sensible defaults
-# ⚙️  OPTIONAL: All variables below can be customized but have working fallbacks
-# 🚀 QUICK START: Template works immediately without any configuration
-# ============================================
+# Copy this file to .env.local and customize your values
+# Never commit .env.local to version control!
 
-# ============================================
-# Comments System Configuration
-# ============================================
-
-# Active provider: giscus, utterances, remark42, commento, none
-# Change this to switch between different comment providers
-# - giscus: GitHub Discussions-based comments (recommended)
-# - utterances: GitHub Issues-based comments
-# - remark42: Self-hosted comment system
-# - commento: Self-hosted comment system
-# - none: Disable comments entirely
-# Default: giscus (if not set, uses hardcoded working configuration)
-COMMENTS_PROVIDER=giscus
-
-# ============================================
-# Giscus Configuration (GitHub Discussions Comments)
-# Get your configuration from https://giscus.app
-# ============================================
-# 
-# Example: GISCUS_REPO=myusername/my-novel-site
-GISCUS_REPO=your-username/your-repository-name
-
-# Example: GISCUS_REPO_ID=R_kgDOH1234567
-GISCUS_REPO_ID=R_kgDOH...
-
-# Example: GISCUS_CATEGORY=Novel Comments
-GISCUS_CATEGORY=General
-
-# Example: GISCUS_CATEGORY_ID=DIC_kwDOH1234567
-GISCUS_CATEGORY_ID=DIC_kwDOH...
-
-# Supported languages: en, es, fr, de, ja, ko, pt, ru, zh-CN, zh-TW, and more
-GISCUS_LANG=en
-
-# Default: 1 (enabled)
-GISCUS_REACTIONS_ENABLED=1
-
-# Enable comments globally
-GISCUS_ENABLED=true
-
-# Options: pathname, url, title, og:title, specific
-GISCUS_MAPPING=pathname
-
-# Options: light, dark, preferred_color_scheme, transparent_dark, fro, dark_dimmed
-# Custom themes: noborder_light, noborder_dark, cobalt, purple_dark
-GISCUS_THEME=fro
-
-# - lazy: Load comments when scrolled into view (recommended for performance)
-# - eager: Load comments immediately when page loads
-GISCUS_LOADING=lazy
-
-# Emit metadata events for analytics
-# IMPORTANT: Use "1" for true, "0" for false (Giscus requires this format)
-GISCUS_EMIT_METADATA=0
-
-# Strict mode - title must match discussion title exactly
-# IMPORTANT: Use "1" for true, "0" for false (Giscus requires this format)
-GISCUS_STRICT=0
-
-# Options: "top" (above comments), "bottom" (below comments)
-GISCUS_INPUT_POSITION=top
-
-# ============================================
-# Per-Novel Comment Configuration
-# ============================================
-# 
-# You can customize comments for individual novels and chapters by adding
-# a "comments" field to your novel or chapter frontmatter:
-#
-# Example in src/content/novels/my-novel.md:
-# ---
-# title: "My Novel"
-# comments:
-#   enabled: true
-#   customCategory: "My Novel Discussion"
-#   customTheme: "dark"
-#   customMapping: "title"
-# ---
-#
-# Example in src/content/chapters/my-chapter.md:
-# ---
-# title: "Chapter 1"
-# comments:
-#   enabled: false  # Disable comments for this chapter
-#   customTheme: "light"
-# ---
-#
-# Available options:
-# - enabled: true/false - Enable or disable comments
-# - customCategory: string - Use a different discussion category
-# - customTheme: string - Override the theme for this content
-# - customMapping: "pathname"|"url"|"title"|"og:title"|"specific" - How to map discussions
-
-# ============================================
 # Site Configuration
-# ============================================
-# 
-# 🎯 Used for: Canonical URLs, RSS feeds, social media sharing, sitemaps
 SITE_URL=https://your-site.com
-
-# 🎯 Used for: Browser title bar, meta tags, RSS feed title, social sharing
 SITE_TITLE=Astro Sumi
-
-# 🎯 Used for: Meta descriptions, RSS feed description, social media previews
 SITE_DESCRIPTION=A clean, minimal template specifically designed for novel and book writing projects
-
-# 🎯 Used for: Footer attribution, RSS feed author, meta tags, chapter/novel fallback author
 SITE_AUTHOR=Your Name
 
-# ============================================
-# Social Media Configuration (⚙️ OPTIONAL)
-# ============================================
-# 
+# Giscus Comments (GitHub Discussions)
+# Get your configuration from https://giscus.app
+GISCUS_REPO=your-username/your-repository-name
+GISCUS_REPO_ID=R_kgDOH...
+GISCUS_CATEGORY=General
+GISCUS_CATEGORY_ID=DIC_kwDOH...
+GISCUS_ENABLED=true
 
-# Your GitHub profile or repository URL
-# 💡 Example: GITHUB_URL=https://github.com/yourusername
+# Giscus Options (optional - defaults provided)
+GISCUS_LANG=en
+GISCUS_THEME=fro
+GISCUS_MAPPING=pathname
+GISCUS_LOADING=lazy
+GISCUS_REACTIONS_ENABLED=1
+GISCUS_EMIT_METADATA=0
+GISCUS_STRICT=0
+GISCUS_INPUT_POSITION=top
+
+# Social Links (optional)
 GITHUB_URL=
-
-# Your email address for contact
-# 💡 Example: EMAIL_ADDRESS=author@mynovelsite.com
 EMAIL_ADDRESS=
-
-# Your Patreon page URL
-# 💡 Example: PATREON_URL=https://patreon.com/yourusername
 PATREON_URL=
-
-# Your Ko-fi page URL
-# 💡 Example: KOFI_URL=https://ko-fi.com/yourusername
 KOFI_URL=
 
-# ============================================
-# Build and Development Configuration (⚙️ OPTIONAL)
-# ============================================
-
-# 🎯 Used for: Build optimization, development features, error handling
-# 📝 Options: development, production
+# Development (optional)
 NODE_ENV=development
-
-# 🎯 Used for: Performance monitoring, user analytics (when implemented)
-# 📝 Format: "true" or "false" (must be string)
 ENABLE_ANALYTICS=false
-
 REPOSITORY_NAME=your-repository
-
 REPOSITORY_OWNER=your-username
-
-# ============================================
-# Alternative Comment Systems (Optional)
-# ============================================
-# 
-# Uncomment and configure if using alternative comment systems.
-# Only one comment provider should be active at a time.
-
-# Utterances Configuration (GitHub Issues-based comments)
-# Get your configuration from https://utteranc.es
-# UTTERANCES_REPO=your-username/your-repository-name
-# UTTERANCES_LABEL=comments
-# UTTERANCES_THEME=github-light
-# UTTERANCES_ISSUE_TERM=pathname
-
-# Remark42 Configuration (Self-hosted comment system)
-# Requires self-hosting: https://remark42.com
-# REMARK42_HOST=https://remark42.example.com
-# REMARK42_SITE_ID=my-site
-# REMARK42_THEME=light
-# REMARK42_LOCALE=en
-
-# Commento Configuration (Self-hosted comment system)
-# Requires self-hosting: https://commento.io
-# COMMENTO_HOST=https://commento.example.com
-# COMMENTO_SITE_ID=my-site
