--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "astro preview",
     "astro": "astro",
     "setup": "node scripts/setup.js",
-    "prettier": "prettier --write **/*.{ts,tsx,css,astro} --ignore-path .gitignore",
+    "prettier": "prettier --write **/*.{ts,tsx,astro} --ignore-path .gitignore",
+    "lint": "bun run lint:css && bun run lint:md",
     "lint:css": "stylelint \"src/**/*.css\"",
-    "lint:css:fix": "stylelint \"src/**/*.css\" --fix",
+    "lint:md": "rumdl check .",
+    "format": "bun run prettier && bun run format:css && bun run format:md",
+    "format:css": "stylelint \"src/**/*.css\" --fix",
+    "format:md": "rumdl fmt .",
     "security:audit": "bun audit --audit-level=moderate",
     "security:fix": "bun audit fix",
     "security:check": "bun audit --audit-level=critical --production",
