--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   "dependencies": {
     "@astrojs/check": "^0.9.5",
     "@astrojs/markdown-remark": "^6.3.8",
-    "@astrojs/mdx": "^4.3.9",
-    "@astrojs/react": "^4.4.1",
+    "@astrojs/mdx": "^4.3.10",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
-    "@tailwindcss/vite": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "astro": "^5.15.3",
+    "astro": "^5.15.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.552.0",
+    "lucide-react": "^0.553.0",
     "picocolors": "^1.1.1",
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
@@ -49,22 +49,23 @@
     "rehype-katex": "^7.0.1",
     "remark-emoji": "^5.0.2",
     "remark-math": "^6.0.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@vitest/ui": "^4.0.6",
+    "@vitest/ui": "^4.0.8",
     "husky": "^9.1.7",
     "jsdom": "^27.1.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-astro-organize-imports": "^0.4.11",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "sharp": "^0.34.5",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.1",
     "stylelint-config-tailwindcss": "^1.0.0",
-    "vitest": "^4.0.6"
+    "vitest": "^4.0.8"
   },
   "resolutions": {
     "form-data": "^4.0.4"
