--- a/package.json
+++ b/package.json
@@ -28,21 +28,17 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.5",
     "@astrojs/markdown-remark": "^6.3.8",
     "@astrojs/mdx": "^4.3.10",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.17",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
     "astro": "^5.15.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.553.0",
+    "lucide-react": "^0.469.0",
     "picocolors": "^1.1.1",
-    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "rehype-external-links": "^3.0.0",
@@ -54,15 +50,27 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.5",
+    "@eslint/js": "^9.18.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@vitest/ui": "^4.0.8",
+    "eslint": "^9.18.0",
+    "eslint-plugin-astro": "^1.3.3",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jsdom": "^27.1.0",
-    "prettier": "^3.6.2",
+    "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-astro-organize-imports": "^0.4.11",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "sharp": "^0.34.5",
-    "stylelint": "^16.25.0",
+    "stylelint": "^16.12.0",
     "stylelint-config-standard": "^39.0.1",
     "stylelint-config-tailwindcss": "^1.0.0",
     "vitest": "^4.0.8"
