--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
       
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+      
       - name: Install rumdl
-        run: |
-          curl -fsSL https://github.com/LoremLabs/rumdl/releases/latest/download/rumdl-x86_64-unknown-linux-gnu.tar.gz | tar xz
-          sudo mv rumdl /usr/local/bin/
-          rumdl --version
+        run: cargo install rumdl
       
       - name: Run CSS linting
         run: bun run lint:css
